# textract-poc

./: README.md  example.py  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
