[tool.poetry]
name = "textract-poc"
version = "0.1.0"
description = ""
authors = ["Jacobi <jayala@rise8.us>"]
readme = "README.md"
packages = [{include = "textract_poc"}]

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "^1.28.22"
Pillow = "^10.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
